<resources>
    <string name="app_name">Enigma App</string>
    <string name="welcome">Welcome</string>
    <string name="sign_in_your_account">Sign In Your Account</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="reset_password">Reset Password</string>
    <string name="send">Send</string>
    <string name="back">Back</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open">Open</string>
    <string name="close">Close</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <!--    nav header -->
    <string name="user_profile_picture">User Profile Picture</string>

    <!--    filters header -->
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="upload">Upload</string>
    <string name="refresh">Refresh</string>
    <string name="filter">Filter</string>

    <!--    News -->
    <string name="news">News</string>
    <string name="filters">Filters</string>
    <string name="no_filters_added">No filters added</string>

    <!--    Balance -->
    <string name="my_cryptocurrency">My Cryptocurrency</string>
    <string name="my_balance">My Balance</string>
    <string name="currency_image">Currency Image</string>

    <!--    Trade -->
    <string name="trade">Trade</string>
    <string name="trade_id">Trade ID</string>
    <string name="edit">Edit</string>
    <string name="mail">Mail</string>
    <string name="bin">Bin</string>
    <string name="settl_batch_id">Settl. Batch ID</string>
    <string name="exec_type">Exec type</string>
    <string name="status">Status</string>
    <string name="nominal">Nominal</string>
    <string name="trade_filter">Trade Filter</string>
    <string name="product">Product</string>
    <string name="execution_type">Execution Type</string>
    <string name="batched">Batched</string>
    <string name="reset">Reset</string>
    <string name="sales_p_amp_l"><![CDATA[Sales P&L=]]></string>
    <string name="client">Client</string>
    <string name="review_amp_submit"><![CDATA[Review & Submit]]></string>
    <string name="provider_price">Provider Price</string>
    <string name="quantity">Quantity</string>
    <string name="broker">Broker</string>
    <string name="company">Company</string>
    <string name="sell">Sell</string>
    <string name="buy">Buy</string>
    <string name="trade_create">Trade Create</string>
    <string name="trade_type">Trade type</string>
    <string name="hedge">Hedge</string>
    <string name="both_legs">Both Legs</string>
    <string name="client_side">Client Side</string>
    <string name="price">Price</string>
    <string name="email">Email</string>
    <string name="finish">Finish</string>
    <string name="request_increase_limit">Request Increase Limit</string>

    <!--   Settings -->
    <string name="settings">Settings</string>
    <string name="fx_currency_exposure_limit">FX currency Exposure Limit</string>
    <string name="max_quantity_per_trade">Max Quantity Per Trade</string>
    <string name="submit">Submit</string>
    <string name="your_request_has_been_sent_and_will_be_reviewed_by_us">Your request has been sent and will be reviewed by us.</string>

    <!--   Section - status select -->
    <string name="select_status">Select Status</string>
    <string name="canceled">Canceled</string>
    <string name="validated">Validated</string>
    <string name="booked">Booked</string>
    <string name="rejected">Rejected</string>

    <!--    Settlement -->
    <string name="settlement">Settlement</string>
    <string name="batch">Batch</string>
    <string name="unitary">Unitary</string>
    <string name="settl_id">Settl. ID</string>
    <string name="amount">Amount</string>
    <string name="open_amount">Open Amount</string>
    <string name="counterparty_account">Counterparty Account</string>
    <string name="review_and_submit">Review &amp; Submit</string>
    <string name="settled_amount">Settled Amount</string>
    <string name="side">Side</string>
    <string name="type">Type</string>
    <string name="add_trade">Add Trade</string>
    <string name="currency_icon">Currency Icon</string>
    <string name="favorite_icon">Favorite Icon</string>
    <string name="settlement_filter">Settlement Filter</string>
    <string name="counterparty">Counterparty</string>
    <string name="comment">Comment</string>
    <string name="create">Create</string>
    <string name="to_send">To Send</string>
    <string name="to_receive">To Receive</string>
    <string name="direction">Direction</string>
    <string name="on_behalf">On Behalf</string>
    <string name="currency">Currency</string>
    <string name="settlement_create">Settlement Create</string>
    <string name="date">Date</string>
    <string name="select_trade">Select Trade</string>
    <string name="add_settlement">Add Settlement</string>

    <!--    Statistics -->
    <string name="statistics">Statistics</string>
    <string name="empty" />

    <!--    Market -->
    <string name="market">Market</string>
    <string name="add">Add</string>
    <string name="add_account">Add Account</string>
    <string name="pending">Pending</string>
    <string name="settled">Settled</string>
    <string name="in_sett">In Sett</string>
    <string name="yearly">Yearly</string>
    <string name="quarterly">Quarterly</string>
    <string name="monthly">Monthly</string>
    <string name="make_account_default">Make Account Default</string>

    <!--    Accounts -->
    <string name="account">Account</string>
    <string name="bank_account">Bank Account</string>
    <string name="cryptocurrency_wallet">Cryptocurrency Wallet</string>
    <string name="name">Name</string>
    <string name="account_type">Account Type</string>
    <string name="details">Details</string>
    <string name="write_all_the_information_of_your_bank">write all the information of your bank</string>
    <string name="send_request">Send request</string>
    <string name="choose_account_type">Choose account type</string>
    <string name="write_name_for_your_account">write name for your account</string>

    <!--    Profile -->
    <string name="profile">Profile</string>
    <string name="profile_image">Profile image</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone number</string>
    <string name="change_password">Change Password</string>
    <string name="save">Save</string>

    <!--    Change password -->
    <string name="change_password_title">Change password</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="confirm_new_password">Confirm new password</string>


</resources>