<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/ubuntu_regular"
        android:text="@string/select_status"
        android:textColor="@color/textColor"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">

        <CheckBox
            android:id="@+id/checkBoxRejectedBatch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:buttonTint="@color/rejected"
            android:fontFamily="@font/ubuntu_regular"
            android:text="@string/rejected"
            android:textColor="@color/rejected"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/checkBoxPendingBatch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:buttonTint="@color/pending"
            android:fontFamily="@font/ubuntu_regular"
            android:text="@string/pending"
            android:textColor="@color/pending"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-8dp"
        android:textSize="16sp"
        android:weightSum="1">

        <CheckBox
            android:id="@+id/checkBoxValidatedBatch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:buttonTint="@color/validated"
            android:fontFamily="@font/ubuntu_regular"
            android:text="@string/validated"
            android:textColor="@color/validated"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/checkBoxSettledBatch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:buttonTint="@color/settled"
            android:fontFamily="@font/ubuntu_regular"
            android:text="@string/settled"
            android:textColor="@color/settled"
            android:textSize="16sp" />
    </LinearLayout>

    <CheckBox
        android:id="@+id/checkBoxInSetBatch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-8dp"
        android:buttonTint="@color/inSet"
        android:fontFamily="@font/ubuntu_regular"
        android:text="@string/in_sett"
        android:textColor="@color/inSet"
        android:textSize="16sp" />
</LinearLayout>