<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center">

    <ImageView
        android:id="@+id/trade_action_edit"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="45sp"
        android:layout_marginRight="45sp"
        android:contentDescription="@string/edit"
        android:src="@drawable/ic_action_edit"
        app:tint="@color/textColor" />

    <ImageView
        android:id="@+id/trade_action_mail"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="45sp"
        android:layout_marginRight="45sp"
        android:contentDescription="@string/mail"
        android:src="@drawable/ic_action_mail"
        app:tint="@color/textColor" />

    <ImageView
        android:id="@+id/trade_action_bin"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:contentDescription="@string/bin"
        android:src="@drawable/ic_action_bin"
        app:tint="@color/textColor" />

</LinearLayout>