<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:layout_marginLeft="32dp"
    android:layout_marginRight="32dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/forgot_password_back_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/textColor"
        android:fontFamily="@font/poppins_light"
        android:text="@string/back"
        android:textColor="@color/textColor"
        android:textSize="14sp"
        android:layout_gravity="start" />

    <View
        android:backgroundTint="@color/textColor"
        android:layout_width="84dp"
        android:layout_height="84dp"
        android:layout_marginTop="56dp"
        android:background="@drawable/ic_enigma_logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/welcome"
        android:textColor="@color/textColor"
        android:textSize="18sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="26dp"
        android:layout_marginTop="35dp"
        android:fontFamily="@font/poppins_light"
        android:maxWidth="152dp"
        android:text="@string/reset_password"
        android:textColor="@color/textColor"
        android:textSize="14sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_username_edit_wrap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@color/colorPrimaryDark"
        android:textColorHint="@color/textHintColor"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:hintTextColor="@color/textHintColor"
        app:passwordToggleTint="@color/textColor">


        <EditText
            android:id="@+id/login_username_edit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/edit_text_border"
            android:hint="@string/username_hint"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/forgot_password_error_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:textColor="@color/red"
        android:textSize="12sp"
        />


    <Button
        android:id="@+id/forgot_password_send_button"
        android:layout_width="302dp"
        android:layout_height="50dp"
        android:layout_marginTop="230dp"
        android:text="@string/send"
        android:textColor="@color/colorSecondary"
        app:backgroundTint="@color/textColor" />

</LinearLayout>