<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:weightSum="1">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:fontFamily="@font/ubuntu_light"
            android:text="@string/from"
            android:textSize="18sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:fontFamily="@font/ubuntu_light"
            android:text="@string/to"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:weightSum="1">

        <TextView
            android:id="@+id/trade_from_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:fontFamily="@font/ubuntu_regular"
            android:text="04 Apr 2020"
            android:textColor="@color/textColor"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/trade_to_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:fontFamily="@font/ubuntu_regular"
            android:text="06 Oct 2020"
            android:textColor="@color/textColor"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        android:layout_marginBottom="15sp"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <ImageView
            android:id="@+id/ic_action_upload"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginEnd="25dp"
            android:layout_marginRight="25dp"
            android:contentDescription="@string/upload"
            android:src="@drawable/ic_upload"
            app:tint="@color/textColor" />

        <ImageView
            android:id="@+id/ic_action_refresh"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginEnd="25dp"
            android:layout_marginRight="25dp"
            android:contentDescription="@string/refresh"
            android:src="@drawable/ic_refresh"
            app:tint="@color/textColor" />

        <ImageView
            android:id="@+id/ic_action_filter"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:contentDescription="@string/filter"
            android:src="@drawable/ic_filter"
            app:tint="@color/textColor" />

    </LinearLayout>

</LinearLayout>